# test

./: .gitignore  README.md  diff.cmd  sync.cmd  sync_all.cmd  sync_base.cmd
ASP.NET/: .gitignore  1.cmd  asp.lst  diff.cmd  fiddler.cfg
CBuilder/: .gitignore  BCBEnv.doc
CMake/: .gitignore
CMake/test/usestudentlib/: CMakeLists.txt  libtest.cpp
JS/: Date.js  Mess.js  OOP.js  TestArg.js  TestBeep.js  TestCircle.js  TestFSO.js  TestGlobal.js  TestInitialization.js  TestInput.js  TestMSWord.js  TestMess.js  TestRunI.js  TestRunII.js  TestTextFileI.js  TestTextFileII.js  TestTextFileIII.js  TestXHR.js  run  wat.js
JavaScript/: .gitignore  1.cmd  diff.cmd
MSBuild/: AnyTest.proj  _msbuild_.cmd  params.cmd
PowerShell/: compare.ps1  cpu.ps1  docker.ps1  env.ps1  get_usb_pnpdeviceid.ps1  logs.ps1  memory.ps1  proceses.ps1  services.ps1  testforfile.ps1  testforfile2.ps1
TypeScript/: 1.cmd  diff.cmd  eslint.txt  node.ps1  prettier.txt
VB/: CreateServiceRow.bas  DATA.rar  PROJ.xls  PROJ1.xls  TestRange.bas  list.bas  test.xls
access/: testdb.mdb
artillery/: script.yml  script_http.yml  script_web_sockets.yml
asm/: Hello.asm  TestCall.asm  TestReg.asm
azure/: cli.ps1  vsc_azure_deploy_to_web_app.docx
bash/: iptables_set.sh  test_all.sh  test_ls.sh  test_multi.sh  test_str.sh  test_substitution.sh  testarrayvariables.sh  testinteractive.sh  url.txt
c#/: .gitignore  1.cmd  cs.lst  diff.cmd
cmd/: anytest.cmd  child.cmd  cpu.cmd  get_version.cmd  (+15 more)
cpp/test/classes/TestConstructor/: CMakeLists.txt  a.cpp  a.h  b.h  c.cpp  container.cpp  d.cpp  d.h  makefile
(+14428 files in other folders)
